--- a/prac5/build.gradle
+++ b/prac5/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'commons-fileupload:commons-fileupload:1.4'
     implementation 'com.querydsl:querydsl-sql-spring:5.0.0'
 
+    implementation 'org.webjars:chartjs:2.9.4'
+
 
 }
 
