--- a/prac5/build.gradle
+++ b/prac5/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'top.jfunc.json:json-gson:1.8.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation("io.javalin:javalin:5.3.2")
