--- a/final/build.gradle
+++ b/final/build.gradle
@@ -19,6 +19,29 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'top.jfunc.json:json-gson:1.8.3'
+    implementation("io.javalin:javalin:5.3.2")
+    implementation("org.slf4j:slf4j-simple:2.0.3")
+    implementation("io.javalin:javalin-rendering:5.3.2")
+
+    implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
+
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.14.0")
+    implementation('org.hibernate:hibernate-core:5.6.3.Final')
+    implementation 'org.hibernate:hibernate-entitymanager:5.4.32.Final'
+    implementation('javax.persistence:javax.persistence-api:2.2')
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation('com.h2database:h2:1.4.200')
+    implementation 'org.postgresql:postgresql:42.3.6'
+    implementation group: 'org.jasypt', name: 'jasypt', version: '1.9.3'
+
+    implementation 'javax.inject:javax.inject:1'
+    implementation 'commons-fileupload:commons-fileupload:1.4'
+    implementation 'com.querydsl:querydsl-sql-spring:5.0.0'
+
+    implementation 'org.webjars:chartjs:2.9.4'
+
 }
 
 test {
