--- a/final/build.gradle
+++ b/final/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     implementation 'com.querydsl:querydsl-sql-spring:5.0.0'
 
     implementation 'org.webjars:chartjs:2.9.4'
-
+    implementation 'com.google.zxing:core:3.4.1'
+    implementation 'com.google.zxing:javase:3.4.1'
 
 }
 
