--- a/prac5/build.gradle
+++ b/prac5/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation("io.javalin:javalin-rendering:5.3.2")
 
     implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
-
+    implementation('com.j2html:j2html:1.0.0')
     implementation("com.fasterxml.jackson.core:jackson-databind:2.14.0")
     implementation('org.hibernate:hibernate-core:5.6.3.Final')
     implementation 'org.hibernate:hibernate-entitymanager:5.4.32.Final'
