--- a/final/build.gradle
+++ b/final/build.gradle
@@ -42,7 +42,13 @@ dependencies {
     implementation 'org.webjars:chartjs:2.9.4'
     implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.google.zxing:javase:3.4.1'
-
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'com.sun.xml.ws:jaxws-ri:2.3.3'
+    implementation 'io.grpc:grpc-netty-shaded:1.43.1'
+    implementation 'io.grpc:grpc-protobuf:1.43.1'
+    implementation 'io.grpc:grpc-stub:1.43.1'
 }
 
 test {
