--- a/final/build.gradle
+++ b/final/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id "com.google.protobuf" version "0.9.2"
 }
 
 group 'org.example'
@@ -46,11 +47,29 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'com.sun.xml.ws:jaxws-ri:2.3.3'
-    implementation 'io.grpc:grpc-netty-shaded:1.43.1'
-    implementation 'io.grpc:grpc-protobuf:1.43.1'
-    implementation 'io.grpc:grpc-stub:1.43.1'
+    runtimeOnly 'io.grpc:grpc-netty-shaded:1.54.1'
+    implementation 'io.grpc:grpc-protobuf:1.54.1'
+    implementation 'io.grpc:grpc-stub:1.54.1'
+    compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
 }
 
 test {
     useJUnitPlatform()
 }
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.21.7"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.54.1'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
+}
+
