--- a/final/build.gradle
+++ b/final/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'com.sun.xml.ws:jaxws-ri:2.3.3'
 
 
@@ -84,6 +85,9 @@ protobuf {
             }
         }
     }
+}
+processResources {
+    duplicatesStrategy = 'exclude'
 }
 
 //Tareas para integrar con el
