--- a/final/build.gradle
+++ b/final/build.gradle
@@ -49,9 +49,16 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'com.sun.xml.ws:jaxws-ri:2.3.3'
+    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'org.imgscalr:imgscalr-lib:4.2'
 
-
-
+    //Librerias necesarias para implementar la api SOAP
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'org.apache.cxf:cxf-rt-frontend-jaxws:3.5.0'
+    implementation 'org.apache.cxf:cxf-rt-transports-http:3.5.0'
+    implementation 'org.apache.cxf:cxf-rt-transports-http-jetty:3.5.0'
+    implementation 'org.eclipse.jetty:jetty-server:9.4.43.v20210629'
+    implementation 'org.eclipse.jetty:jetty-servlet:9.4.43.v20210629'
     //Librerías necesarias para para implementar gRPC y Protobuf, ver: https://github.com/grpc/grpc-java
     implementation 'io.grpc:grpc-netty-shaded:1.54.1'
     implementation 'io.grpc:grpc-protobuf:1.54.1'
